# openapi-slice-mcp

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml  smithery.yaml
.github/workflows/: publish.yml
