[project]
name = "openapi-slice-mcp"
version = "0.1.1"
description = "MCP server that extracts relevant portions of OpenAPI specs for specific endpoints, reducing context size when working with large API specifications"
authors = [
    { name = "OpenAPI Slice MCP", email = "maciek@ultraview.pl" },
]
readme = "README.md"
requires-python = ">=3.12"
keywords = [
    "mcp",
    "openapi",
    "api",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.10.6",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
]

[project.license]
text = "MIT"

[project.scripts]
openapi-slice-mcp = "main:main"
openapi-slice-mcp-http = "main:main_http"

[project.urls]
Homepage = "https://github.com/vvarp/openapi-slice-mcp"
Repository = "https://github.com/vvarp/openapi-slice-mcp"
